# reth-perf-utils

./: .gitignore  Cargo.toml  README.md
perf-metrics/: Cargo.toml
perf-metrics/src/: lib.rs
perf-metrics/src/dashboard/: cache.rs  commons.rs  duration.rs  listener.rs  mod.rs  opcode.rs  tps_gas.rs
perf-metrics/src/metrics/: duration.rs  execute_measure.rs  macros.rs  metric.rs  mod.rs  tps_gas.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/allocator/: mod.rs
utils/src/metrics/: instruction.rs  metric.rs  mod.rs  transact.rs  types.rs  wrapper.rs
utils/src/time_utils/: cycles.rs  instant.rs  mod.rs  time_trace.rs
